--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -1,6 +1,9 @@
 /*************************************************
 *****************general css**********************
 *************************************************/
+
+/*Version: 1.0.0*/
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 *{
@@ -118,7 +121,7 @@ html, body{
   background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.2) 60%,rgba(0,0,0,.2) 80%);
 }*/
 
-#topnavbar{
+#topnavbar .menu-main-navigation-container .menu{
   /*position: absolute;
   bottom: 0;
   right: 0;*/
@@ -127,18 +130,40 @@ html, body{
   /*top: 0;
   z-index: 3;*/
   display: flex;
+  list-style-type: none;
+}
 
+#topnavbar li{
+  color: #760355;
 }
 
 #topnavbar a{
   color: #760355;
-
+  text-decoration: none;
 }
 
 #topnavbar a:hover{
   color: #fff;
-  background-color: #760355;
+  /*background-color: #760355;*/
+}
 
+#topnavbar li:hover{
+  color: #fff;
+  background-color: #760355;
+}
+
+#topnavbar li a:hover{
+  color: #fff;
+}
+
+#topnavbar .menu-main-navigation-container .menu ul{
+  list-style: none;
+}
+
+ul#menu-main-navigation{
+  list-style: none;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 #topnavbar .icon{
@@ -161,11 +186,11 @@ html, body{
 }
 
 @media screen and (max-width: 600px){
-  a.childclear{
+  li.childclear{
     display: none;
   }
 
-  a.childclear1{
+  li.childclear1{
     display: none;
   }
 
@@ -263,7 +288,7 @@ html, body{
 #slantedsec2{
       position: relative;
       width: 100%;
-      height: 550px;
+      /*height: auto;*/
       background: #fff;
       box-sizing: border-box;
       padding: 30px;
@@ -293,7 +318,8 @@ html, body{
 .accentlinecenterdark{
   width: 60px;
   height: 2px;
-  background-color: #16262e;
+  /*background-color: #16262e;*/
+  background-color: #760355;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
@@ -325,9 +351,6 @@ footer .card-body{
   text-align: start;
 }
 
-footer .card-header{
-  /*background-color: lightgray;*/
-}
 
 footer .card{
   color: #fff;
