--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -381,7 +381,7 @@ footer a:hover{
 ******Non LandingPage Template Page Stylings******
 *************************************************/
 
-.mainarea{
+.mainarea-page{
   /*background-color: #8896ab;*/
   background-color: #fff;
   min-height: auto;
@@ -393,4 +393,17 @@ footer a:hover{
   border: 1px solid rgba(123, 109, 141, 0.3);
   border-radius: 3px;
   text-align: center;
+}
+
+.mainarea-single{
+  /*background-color: #8896ab;*/
+  background-color: #fff;
+  min-height: auto;
+  /*height: 600px;*/
+  /*box-sizing: border-box;*/
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(123, 109, 141, 0.3);
+  border-radius: 3px;
 }
