--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -41,7 +41,7 @@ html, body{
   width: 100vw;
   height: 100vh;
   max-height: 100vh;
-  background-image: url("../media/firstlandingbanner1.jpg");
+  /*background-image: url("../media/firstlandingbanner1.jpg");*/
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -95,6 +95,10 @@ html, body{
   position: absolute;
   top: 30%;
   left: 5%;
+}
+
+#top-logo{
+  border-radius: 50%;
 }
 
 /*************************************************
