--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -110,7 +110,7 @@ html, body{
   z-index: 3;
   top: 0;
   background-color: #fff;
-  border-bottom: 4px solid #760355;
+  /*border-bottom: 4px solid #760355;*/
 }
 
 /*#topnavbarcontainer::after{
@@ -136,12 +136,12 @@ html, body{
   list-style-type: none;
 }
 
-#topnavbar li{
+/*#topnavbar li{
   color: #760355;
-}
+}*/
 
 #topnavbar a{
-  color: #760355;
+  /*color: #760355;*/
   text-decoration: none;
 }
 
@@ -152,7 +152,7 @@ html, body{
 
 #topnavbar li:hover{
   color: #fff;
-  background-color: #760355;
+  /*background-color: #760355;*/
 }
 
 #topnavbar li a:hover{
@@ -240,7 +240,7 @@ ul#menu-main-navigation{
       position: relative;
       width: 100%;
       height: 550px;
-      background-color: #760355;
+      /*background-color: #760355;*/
       /*background: #9FA2B2;*/
       box-sizing: border-box;
       padding: 30px;
@@ -322,7 +322,7 @@ ul#menu-main-navigation{
   width: 60px;
   height: 2px;
   /*background-color: #16262e;*/
-  background-color: #760355;
+  background-color: #16262e;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
@@ -373,7 +373,7 @@ footer a{
 
 footer a:hover{
   background-color: #fff;
-  color: #760355;
+  /*color: #760355;*/
 }
 
 
