enabled footer widget area for social media icons

--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -376,8 +376,13 @@ footer a:hover{
 }
 
 
+/*************************************************
+**********Footer Widget Area Stylings*************
+*************************************************/
 
-
+.widget{
+  list-style-type: none;
+}
 
 
 /*************************************************
