--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -33,6 +33,18 @@ html, body{
   height: auto;
 }
 
+
+/*************************************************
+****************Searchform css********************
+*************************************************/
+
+#searchsubmit{
+  background-color: rgba(255, 255, 255, 0.4);
+  border: solid transparent;
+  border-radius: 4px;
+  color: #fff;
+}
+
 /*************************************************
 ***************Top Landing Section css************
 *************************************************/
@@ -64,7 +76,7 @@ html, body{
 
 #topsec a span{
   position: absolute;
-  bottom: 3%;
+  bottom: 8%;
   left: 50%;
   width: 46px;
   height: 46px;
