--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -45,6 +45,22 @@ html, body{
   color: #fff;
 }
 
+input#searchsubmit:hover{
+  background-color: #fff;
+  color: #000;
+}
+
+#s{
+  background-color: rgba(255, 255, 255, 0.4);
+  border: transparent;
+}
+
+@media screen and (max-width: 600px){
+  .topsec-searchbar #searchform{
+    display: none;
+  }
+}
+
 /*************************************************
 ***************Top Landing Section css************
 *************************************************/
