added package name for documentation purposes, also added 2 page templates

--- a/style.css
+++ b/style.css
@@ -5,4 +5,5 @@ Description: Use this custom theme as a placeholder while you work on your own p
 Tags: bootstrap, custom, jquery, font awesome, first
 Version: 1.0.0
 Text Domain: alumtheme
+@package AlumniNetwork
 */
